[gd_scene load_steps=3 format=2]

[ext_resource path="res://Networks/Server_browser.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Prefabs/server_listener.tscn" type="PackedScene" id=2]

[node name="Server_browser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.364706 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b_panel" type="Panel" parent="Panel"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0

[node name="address_bar" type="LineEdit" parent="."]
anchor_left = 1.0
anchor_top = 0.368
anchor_right = 1.0
anchor_bottom = 0.368
margin_left = -320.0
margin_top = -12.8
margin_right = -128.0
margin_bottom = 11.2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "192.168.1."
align = 1
clear_button_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join_dir" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.367
anchor_right = 1.0
anchor_bottom = 0.367
margin_left = -128.0
margin_top = -12.2
margin_right = -64.0
margin_bottom = 11.8
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connection_time" type="Timer" parent="join_dir"]
wait_time = 5.0
one_shot = true

[node name="server_container" type="VBoxContainer" parent="."]
anchor_left = 0.062
anchor_top = 0.147
anchor_right = 0.625
anchor_bottom = 0.853
margin_left = 0.511997
margin_top = -0.199997
margin_bottom = 0.199982
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txt" type="Label" parent="."]
anchor_top = 0.093
anchor_right = 1.0
anchor_bottom = 0.093
margin_left = 64.0
margin_top = -23.8
margin_right = -384.0
margin_bottom = 24.2
text = "Finding Servers... Servers Available:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_b" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -56.0
margin_right = 136.0
margin_bottom = -20.0
text = "< Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_listener" parent="." instance=ExtResource( 2 )]

[connection signal="text_entered" from="address_bar" to="." method="_on_address_bar_text_entered"]
[connection signal="pressed" from="join_dir" to="." method="_on_join_dir_pressed"]
[connection signal="timeout" from="join_dir/connection_time" to="." method="_on_connection_time_timeout"]
[connection signal="pressed" from="back_b" to="." method="_on_back_b_pressed"]
[connection signal="new_server" from="server_listener" to="." method="_on_Server_browser_new_server"]
[connection signal="remove_server" from="server_listener" to="." method="_on_Server_browser_remove_server"]
